<resources>
    <string name="app_name">Bread</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_main">Home</string>
    <string name="button_http_request">Http Request</string>
    <string name="action_setting">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="button_save_message">Save Message</string>
    <string name="button_show_message">Show Message</string>
    <string name="saved_user_name"></string>
    <string name="apple_of_my_eye">Keep me as the apple of thy eye, hide me under the shadow of thy wings.</string>

    <string name="button_send_request">Send Request</string>

    <string name="button_note">Start Note</string>

    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="note_save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
